<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nebula_ros</name>
  <version>0.1.0</version>
  <description>Nebula Lidar Drivers</description>
  <maintainer email="contact@map4.jp">MAP IV</maintainer>

  <license>Apache 2</license>
  <author>Tier IV</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ros_environment</buildtool_depend>

  <depend>continental_msgs</depend>
  <depend>continental_srvs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>geometry_msgs</depend>
  <depend>libpcl-all-dev</depend>
  <depend>nebula_common</depend>
  <depend>nebula_decoders</depend>
  <depend>nebula_hw_interfaces</depend>
  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>robosense_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>velodyne_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>yaml-cpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
